# ecm-rs

./: Cargo.toml  README.md
.github/: dependabot.yml  renovate.json5
.github/workflows/: benchmark.yml  ci.yml
benches/: bench.rs
ecm-sys/: Cargo.toml  README.md  build.rs  gen.sh  wrapper.h
ecm-sys/src/: bindings.rs  lib.rs
src/: ecm.rs  lib.rs  params.rs  point.rs
