[package]
name = "ecm"
version = "0.1.0"
edition = "2021"
authors = ["skyf0l <skyf0lmails@proton.me>"]
description = "Lenstra's Elliptic Curve Factorization Implementation"
repository = "https://github.com/skyf0l/ecm-rs"
license = "MIT OR Apache-2.0"
categories = ["mathematics"]
keywords = ["factorization", "elliptic-curves", "lenstra", "ECM"]
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
]
readme = "README.md"

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[profile.bench]
opt-level = 3
debug = true

[dependencies]
primal = "0.3"

[dependencies.rug]
version = "1"
default-features = false
features = ["integer", "rand"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false