[package]
name = "ecm"
version = "0.2.0"
edition = "2021"
authors = ["skyf0l <skyf0lmails@proton.me>"]
description = "Lenstra's Elliptic Curve Factorization Implementation with Big Integers"
repository = "https://github.com/skyf0l/ecm-rs"
license = "MIT OR Apache-2.0"
categories = ["mathematics"]
keywords = ["number-theory", "primes", "lenstra", "ECM", "bignum"]
include = [
  "benches/**/*",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
]
readme = "README.md"

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[profile.bench]
opt-level = 3
debug = true

[features]
default = []
progress-bar = ["indicatif"]

[dependencies]
indicatif = { version = "0.17", optional = true }
primal = "0.3"
thiserror = "1"

[dependencies.rug]
version = "1"
default-features = false
features = ["integer", "rand"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
