[package]
name = "ecm"
version = "0.3.0"
edition = "2021"
authors = ["skyf0l <skyf0lmails@proton.me>"]
description = "High-level rust bindings to the GMP-ECM library"
repository = "https://github.com/skyf0l/ecm-rs"
license = "MIT OR Apache-2.0"
categories = ["mathematics"]
keywords = ["number-theory", "primes", "lenstra", "ECM", "bignum"]
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
]
readme = "README.md"

[workspace]
members = ["ecm-sys"]

[dependencies]
gmp-mpfr-sys = "1.5"

[dependencies.rug]
version = "1"
default-features = false
features = ["integer", "rand"]

[dependencies.ecm-sys]
path = "ecm-sys"
version = "0.1.0"
